Cursor: Apply local changes for cloud agent